--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
+        <kotlin-test-junit.version>1.4.30</kotlin-test-junit.version>
     </properties>
 
     <repositories>
@@ -31,7 +32,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>1.4.30</version>
+                <version>${kotlin-test-junit.version}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -61,16 +62,22 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>1.4.2</version>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
-            <version>1.4.30</version>
+            <version>${kotlin-test-junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>1.4.30</version>
+            <version>${kotlin-test-junit.version}</version>
         </dependency>
     </dependencies>
 
